# pandas-workshop

./: .gitignore  NOTICE  README.md  pyproject.toml  requirements.txt
assets/images/pandas/: ATTRIBUTION.md
code/: 01-introduction.ipynb  02-data-structures.ipynb  03-data-io.ipynb  04-indexing-selection.ipynb  05-data-cleaning.ipynb
